2006-02-04 12:46 Mike Park  <mike.park@nasa.gov>

	* src/unit_main.c (--inflate) added a spike to demonstrate
	inflating boundary layers.

2006-01-30  9:07 Mike Park  <mike.park@nasa.gov>

	* src/gridmpi.c (gridParallelSwap) call gridRemoveThreeFaceCell as
	well as gridRemoveTwoFaceCell to remove cells that would impeed
	projection.

2006-01-28 10:21 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridSetNodePart) initialize grid->part to
	grid->partId to prevent uninitialized memory read (detected by
	valgrind of gridswapMT.rb test).

2006-01-27 13:02 Mike Park  <mike.park@nasa.gov>

	* src/gridswap.c (gridRemoveThreeFaceCell) Add to combat the
	problem of a degree three face with one cell that can not be
	projected due to topology

2006-01-27 11:05 Mike Park  <mike.park@nasa.gov>

	* src/gridmpi.c (gridSmoothNodeFaceAreaUV) added
	gridSmartAreaUVLaplacian call and mulitple
	gridSmoothNodeFaceAreaUVSimplex calls.
	* src/gridmpi.c (gridSmartAreaUVLaplacian) new function to do
	smart laplacian smooth of face uv area to untangle surface grid.

2006-01-27  9:37 Mike Park  <mike.park@nasa.gov>

	* src/gridmpi.c (gridParallelSwap) extracted one complete loop of
	gridRemoveTwoFaceCell after other types of swapping to make sure
	that previous swapping passes did not create a new two face cell
	that was missed.

2006-01-25 16:40 Mike Park  <mike.park@nasa.gov>

	* src/gridmpi.c (gridParallelAdapt) to fix a subtle
	parallelization bug. Split problem projection edges in the interior
	of the parition while doing boundaries to allow projection and
	untangling to proceed.

2006-01-25 16:40 Mike Park  <mike.park@nasa.gov>

	* src/gridfacer.c (gridfacerSplit) removed gridUntangle, call
	after cycle is complete.

2006-01-25 16:40 Mike Park  <mike.park@nasa.gov>

	* src/gridmpi.c (gridParallelAdapt) use_a_plan = TRUE as default.
	This affects "production" path in code.

2006-01-25 16:10 Mike Park  <mike.park@nasa.gov>
